# LichtFeld-Studio

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  REACTIVE_UI_REMAINING_PLAN.md  README.md  THIRD_PARTY_LICENSES.md  vcpkg.json
.github/overlays/libplacebo/: portfile.cmake  usage  vcpkg.json
.github/workflows/: nightly.yml  ubuntu.yml  windows.yml
cmake/: SetupNativeFileDialog.cmake
docs/: build_performance_2026_07.md  building_and_distribution.md  imgui_inventory.md  layout-composition.md  plugin-system.md
docs/development/: vulkan-elite-roadmap.md  vulkan-viewer-migration.md
docs/docs/development/: assertions.md  flags.md
docs/plugins/: api-reference.md  getting-started.md
docs/plugins/examples/: README.md  training_monitor.py
scripts/: run_vulkan_validation.sh
src/app/: application.cpp  main.cpp  mcp_gui_tools.cpp  mcp_operator_tools.cpp  mcp_runtime_tools.cpp  mcp_ui_registry_tools.cpp
src/core/: CMakeLists.txt  argument_parser.cpp  camera.cpp  checkpoint_format.cpp  crash_handler.cpp  cuda_error.cpp  cuda_error_typed.cpp  device_fault.cpp  error.cpp  error_bus.cpp  error_envelope.cpp  error_latch.cpp  error_reporter.cpp  failure_report.cpp  guarded_task.cpp  image_io.cpp  logger.cpp  memory_pressure.cpp  parameters.cpp  reactive_store.cpp  scene.cpp  splat_data.cpp  splat_data_mirror.cpp  splat_data_transform.cpp  splat_exportable_storage.cpp  splat_simplify.cpp
src/core/cuda/: CMakeLists.txt  diagnostics_compile_check.cpp  exportable_storage.cpp  memory_arena.cu  memory_arena.hpp  memory_arena_owner.cpp  tensor_debug.cu
src/io/: CMakeLists.txt  hdr_libplacebo.cpp  hdr_libplacebo.hpp  hdr_libplacebo_av.c  hdr_tonemap.cpp  hdr_tonemap.hpp  loader_service.cpp  nvcodec_image_loader.cpp  nvcodec_image_loader.hpp  pipelined_image_loader.cpp  video_frame_extractor.cpp  video_frame_extractor.hpp  video_player.cpp  video_player.hpp
src/mcp/: llm_client.cpp  mcp_http_server.cpp  mcp_protocol.cpp  mcp_protocol.hpp  mcp_server.cpp  mcp_server.hpp  mcp_tools.cpp  mcp_tools.hpp  mcp_training_context.cpp  mcp_training_context.hpp  render_capture_utils.hpp  shared_scene_tools.cpp  shared_scene_tools.hpp
src/preprocessing/: CMakeLists.txt
src/python/: CMakeLists.txt  plugin_runner.cpp  python_runtime.cpp  python_runtime.hpp  runner.cpp  runner.hpp  ui_hooks.cpp  ui_hooks.hpp  viewport_overlay.cpp
src/rendering/: CMakeLists.txt  environment_image.hpp  export_post_process.cpp  mesh2splat.cpp  point_cloud_raster.cu  point_cloud_raster.cuh  raster_rendering_engine.cpp  screen_overlay_renderer.cpp  screen_overlay_renderer.hpp  selection_ops.cu  selection_ops.hpp  vulkan_result.hpp  vulkan_wait.cpp  vulkan_wait.hpp
src/rendering/rasterizer/vksplat_fwd/: CMakeLists.txt
src/rendering/rasterizer/vksplat_fwd/shader/src/slang/: alphablend_shader.slang  selection_mask.slang  spherical_harmonics.slang  tile_shader.slang  utils.slang  vertex_shader.slang
src/rendering/rasterizer/vksplat_fwd/src/: buffer.cpp  buffer.h  gs_pipeline.cpp  gs_pipeline.h  gs_renderer.cpp  gs_renderer.h
src/tcp/: tcp_publisher.cpp  tcp_responder.cpp  tcp_server.cpp
src/training/: CMakeLists.txt  checkpoint.cpp  dataset.hpp  trainer.cpp  trainer.hpp  training_setup.cpp  training_setup.hpp
src/visualizer/: CMakeLists.txt  app_store.cpp  gui_capabilities.cpp  visualizer_impl.cpp  visualizer_impl.hpp
tests/: CMakeLists.txt  bench_tensor_launch_overhead.cpp  benchmark_pipelined_loader.cpp  benchmark_rad_io.cpp  benchmark_reactive_store.cpp  benchmark_selection_modes.cpp  device_fault_cuda_utils.cu  device_fault_cuda_utils.hpp  test_argument_parser.cpp  test_assert_hardening.cpp  test_checkpoint_resume.cpp  test_colmap_binary_error_taxonomy.cpp  test_colmap_image_layout.cpp  test_colmap_points3d_text.cpp  test_crash_handler.cpp  test_cuda_error.cpp  test_cuda_error_typed.cpp  test_cuda_launch_check.cpp  test_device_fault.cpp  test_error_bus.cpp  test_error_core.cpp  test_error_envelope.cpp  test_error_reporter.cpp  test_exportable_storage.cpp  test_fastgs_analytical_gradients.cpp  test_fastgs_fuzz.cpp  test_fastgs_kernels.cpp  test_fused_l1_ssim.cpp  test_input_controller_dataset_load.cpp  test_input_controller_focus.cpp  test_lod_builder_bench.cpp  test_lod_page_dequant.cpp  test_logger.cpp  test_main.cpp  test_mask_loss.cpp  test_mcmc.cpp  test_mcmc_dead_mask.cpp  test_mcp_protocol.cpp  test_mcp_sequencer_tools.cpp  test_mcp_shared_scene_tools.cpp  (+55 more)
tests/cuda_fixtures/: device_fault_negative_error_hpp.cu  device_fault_negative_result.cu
tests/python/: conftest.py  test_alignment_overlay_regressions.py  test_asset_manager_panel.py  test_cuda_raster_cleanup_regressions.py  test_export_panel.py  test_histogram_panel.py  test_import_dialog_panels.py  test_input_settings_panel.py  test_menubar_resources.py  test_mesh2splat_panel.py  test_pano_coordinate_regressions.py  test_plugin_docs.py  test_plugin_marketplace_panel.py  test_plugin_venv_repair.py  test_property_system.py  test_rendering_panel_regressions.py  test_rendering_panel_simplify.py  test_rmlui_image_sources.py  test_runtime_state.py  test_scripts_panel.py  test_selection_controls_panel.py  test_selection_groups_panel.py  test_store.py  test_toolbar_hooks.py  test_tools_new.py  test_training_panel_regressions.py  test_typed_errors.py  test_ui_api_completeness.py  test_viewport_overlay_hooks.py  test_vksplat_orthographic_regressions.py  test_vksplat_output_lifetime_regressions.py
tools/: error_debt_baseline.json  error_debt_census.py  test_error_debt_census.py
(+445 files in other folders)
